Edited the UI components and added arrival time and journey duration to the scroll view cells

--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -9,9 +9,16 @@
     >
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/time_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
+    <TextView
+        android:id="@+id/duration_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+    
 </LinearLayout>
