--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -20,5 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
-    
+    <TextView
+        android:id="@+id/trainOperator_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        />
+
 </LinearLayout>
