--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
 
     <TextView
+        style="@style/MainText"
         android:id="@+id/main_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,6 +24,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <Spinner
+        style="@style/AppTheme"
         android:id="@+id/departure_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -33,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/main_text" />
 
     <Spinner
+        style="@style/AppTheme"
         android:id="@+id/arrival_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -56,12 +59,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/departures_table"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         android:layout_marginTop="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintTop_toBottomOf="@+id/button"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
