--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -7,16 +7,19 @@
     tools:context=".TableAdapter">
 
     <TextView
+        style="@style/MainText"
         android:id="@+id/time_text_view"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
+        style="@style/MainText"
         android:id="@+id/duration_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
@@ -25,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/time_text_view" />
 
     <TextView
+        style="@style/MainText"
         android:id="@+id/trainOperator_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
@@ -32,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />
 
     <TextView
+        style="@style/AlternateText"
         android:id="@+id/price_text_view"
         android:layout_width="135dp"
         android:layout_height="40dp"
