--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:textSize="22sp"
+        tools:text="View 1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,6 +21,7 @@
         android:id="@+id/duration_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
+        tools:text="View 2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view" />
@@ -28,6 +30,7 @@
         android:id="@+id/trainOperator_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
+        tools:text="View 3"
         app:layout_constraintLeft_toLeftOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />
 
@@ -36,6 +39,7 @@
         android:layout_width="135dp"
         android:layout_height="40dp"
         android:textSize="18sp"
+        tools:text="View 4"
         app:layout_constraintLeft_toRightOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view"
         tools:layout_editor_absoluteY="20dp" />
