--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:textSize="22sp"
-        tools:text="View 1"
+        tools:text="16:48 - 17:59"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/duration_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
-        tools:text="View 2"
+        tools:text="71m"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view" />
@@ -30,7 +30,7 @@
         android:id="@+id/trainOperator_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
-        tools:text="View 3"
+        tools:text="Great Western Railway"
         app:layout_constraintLeft_toLeftOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />
 
@@ -39,7 +39,7 @@
         android:layout_width="135dp"
         android:layout_height="40dp"
         android:textSize="18sp"
-        tools:text="View 4"
+        tools:text="£28.20"
         app:layout_constraintLeft_toRightOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view"
         tools:layout_editor_absoluteY="20dp" />
