--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -10,7 +10,8 @@
         style="@style/MainText"
         android:id="@+id/time_text_view"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.4"
         android:textSize="22sp"
         tools:text="16:48 - 17:59"
         android:textStyle="bold"
@@ -23,8 +24,9 @@
         style="@style/MainText"
         android:id="@+id/duration_text_view"
         android:layout_width="275dp"
-        android:layout_height="20dp"
-        tools:text="71m"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.29"
+        tools:text="71min"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view" />
@@ -33,7 +35,8 @@
         style="@style/MainText"
         android:id="@+id/trainOperator_text_view"
         android:layout_width="275dp"
-        android:layout_height="20dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.29"
         tools:text="Great Western Railway"
         app:layout_constraintLeft_toLeftOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />
@@ -42,7 +45,8 @@
         style="@style/AlternateText"
         android:id="@+id/price_text_view"
         android:layout_width="135dp"
-        android:layout_height="40dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.58"
         android:textSize="18sp"
         tools:text="£28.20"
         app:layout_constraintLeft_toRightOf="@id/duration_text_view"
@@ -51,7 +55,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.02"
         android:background="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@+id/trainOperator_text_view"
         />
