--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="TrainBoard"
+        android:text="@string/main_title"
         android:textAlignment="center"
         android:textSize="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
