--- a/app/src/main/res/layout/cell_view.xml
+++ b/app/src/main/res/layout/cell_view.xml
@@ -7,20 +7,18 @@
     tools:context=".TableAdapter">
 
     <TextView
-        style="@style/MainText"
+        style="@style/BoldHeading"
         android:id="@+id/time_text_view"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:textSize="22sp"
         tools:text="16:48 - 17:59"
-        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
-        style="@style/MainText"
+        style="@style/Body"
         android:id="@+id/duration_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
@@ -30,7 +28,7 @@
         app:layout_constraintTop_toBottomOf="@+id/time_text_view" />
 
     <TextView
-        style="@style/MainText"
+        style="@style/Body"
         android:id="@+id/trainOperator_text_view"
         android:layout_width="275dp"
         android:layout_height="20dp"
@@ -39,11 +37,10 @@
         app:layout_constraintTop_toBottomOf="@+id/duration_text_view" />
 
     <TextView
-        style="@style/AlternateText"
+        style="@style/FeatureText"
         android:id="@+id/price_text_view"
         android:layout_width="135dp"
         android:layout_height="40dp"
-        android:textSize="18sp"
         tools:text="£28.20"
         app:layout_constraintLeft_toRightOf="@id/duration_text_view"
         app:layout_constraintTop_toBottomOf="@+id/time_text_view"
