--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,10 +4,26 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="MainText" parent="TextAppearance.AppCompat">
+    <style name="PageTitle" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">40sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+    <style name="FeatureText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="BoldHeading" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="Body" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
-    <style name="AlternateText" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">@color/colorAccent</item>
+    <style name="StandardButton" parent="TextAppearance.AppCompat">
+        <item name="android:background">@drawable/button_shape</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
 </resources>
